Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -47,7 +47,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Driver class\n"
+    "# Driver class\n",
+    "class Driver:\n",
+    "    pass"
    ]
   },
   {
