--- a/index.ipynb
+++ b/index.ipynb
@@ -77,7 +77,7 @@
    "outputs": [],
    "source": [
     "# Assign a driver instance\n",
-    "driver = None \n",
+    "driver = Driver() \n",
     "\n",
     "# Give the driver instance object 'miles_driven' of 100000\n"
    ]
