Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -79,7 +79,8 @@
     "# Assign a driver instance\n",
     "driver = Driver() \n",
     "\n",
-    "# Give the driver instance object 'miles_driven' of 100000\n"
+    "# Give the driver instance object 'miles_driven' of 100000\n",
+    "driver['miles_driven'] = 10"
    ]
   },
   {
