Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -72,15 +72,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "'Driver' object does not support item assignment",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0mTraceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-3-17078a5dd2d0>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;31m# Give the driver instance object 'miles_driven' of 100000\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 5\u001b[0;31m \u001b[0mdriver\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'miles_driven'\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m100000\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m: 'Driver' object does not support item assignment"
+     ]
+    }
+   ],
    "source": [
     "# Assign a driver instance\n",
     "driver = Driver() \n",
     "\n",
     "# Give the driver instance object 'miles_driven' of 100000\n",
-    "driver['miles_driven'] = 10"
+    "driver['miles_driven'] = 100000"
    ]
   },
   {
