Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -90,9 +90,10 @@
    "outputs": [],
    "source": [
     "# Assign a passenger instance\n",
-    "passenger = P \n",
+    "passenger = Passenger() \n",
     "\n",
-    "# Give the passenger instance object a 'rating' of 4.9\n"
+    "# Give the passenger instance object a 'rating' of 4.9\n",
+    "passenger.rating = 4."
    ]
   },
   {
