Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -85,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -93,7 +93,7 @@
     "passenger = Passenger() \n",
     "\n",
     "# Give the passenger instance object a 'rating' of 4.9\n",
-    "passenger.rating = 4."
+    "passenger.rating = 4.9"
    ]
   },
   {
