--- a/index.ipynb
+++ b/index.ipynb
@@ -121,7 +121,7 @@
    "source": [
     "def find_driver_by_name(drivers, name):\n",
     "    # Write your code here\n",
-    "    \n",
+    "    for driver i\n",
     "    pass"
    ]
   },
