Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -122,7 +122,8 @@
     "def find_driver_by_name(drivers, name):\n",
     "    # Write your code here\n",
     "    for driver in drivers:\n",
-    "        if driver.\n",
+    "        if driver.name == name:\n",
+    "            \n",
     "    pass"
    ]
   },
