--- a/index.ipynb
+++ b/index.ipynb
@@ -123,6 +123,8 @@
     "    # Write your code here\n",
     "    for driver in drivers:\n",
     "        if driver.name == name:\n",
+    "            return driver\n",
+    "        else:\n",
     "            \n",
     "    pass"
    ]
