Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -125,8 +125,7 @@
     "        if driver.name == name:\n",
     "            return driver\n",
     "        else:\n",
-    "            \n",
-    "    pass"
+    "            return \"Sorry, we couldn't find a driver with the name, Jack! :(\"\n"
    ]
   },
   {
