Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -115,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -125,7 +125,7 @@
     "        if driver.name == name:\n",
     "            return driver\n",
     "        else:\n",
-    "            return \"Sorry, we couldn't find a driver with the name, Jack! :(\"\n"
+    "            return \"Sorry, we couldn't find a driver with the name, Jack! :(\""
    ]
   },
   {
@@ -137,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
