--- a/index.ipynb
+++ b/index.ipynb
@@ -179,7 +179,7 @@
    "outputs": [],
    "source": [
     "# Find \"jake\"\n",
-    "output_1 = None\n",
+    "output_1 = find_driver_by_name(list_of_drivers, name)\n",
     "output_1"
    ]
   },
