Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -179,7 +179,7 @@
    "outputs": [],
    "source": [
     "# Find \"jake\"\n",
-    "output_1 = find_driver_by_name(list_of_drivers, name)\n",
+    "output_1 = find_driver_by_name(list_of_drivers, 'jake')\n",
     "output_1"
    ]
   },
@@ -190,7 +190,7 @@
    "outputs": [],
    "source": [
     "# Find \"michelle\"\n",
-    "output_2 = None\n",
+    "output_2 = find_driver_by_name(list_of_drivers, 'jake')\n",
     "output_2"
    ]
   },
@@ -201,7 +201,7 @@
    "outputs": [],
    "source": [
     "# Find \"allison\"\n",
-    "output_3 = None\n",
+    "output_3 = find_driver_by_name(list_of_drivers, 'jake')\n",
     "output_3"
    ]
   },
