Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -174,9 +174,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\"Sorry, we couldn't find a driver with the name, Jack! :(\""
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Find \"jake\"\n",
     "output_1 = find_driver_by_name(list_of_drivers, 'jake')\n",
@@ -190,7 +201,7 @@
    "outputs": [],
    "source": [
     "# Find \"michelle\"\n",
-    "output_2 = find_driver_by_name(list_of_drivers, 'jake')\n",
+    "output_2 = find_driver_by_name(list_of_drivers, 'michelle')\n",
     "output_2"
    ]
   },
@@ -201,7 +212,7 @@
    "outputs": [],
    "source": [
     "# Find \"allison\"\n",
-    "output_3 = find_driver_by_name(list_of_drivers, 'jake')\n",
+    "output_3 = find_driver_by_name(list_of_drivers, 'allison')\n",
     "output_3"
    ]
   },
