--- a/index.ipynb
+++ b/index.ipynb
@@ -115,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -125,7 +125,7 @@
     "        if driver.name == name:\n",
     "            return driver\n",
     "        else:\n",
-    "            return f\"Sorry, we couldn't find a driver with the name, {name.title}! :(\""
+    "            return f\"Sorry, we couldn't find a driver with the name, {name.title()}! :(\""
    ]
   },
   {
@@ -137,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -174,16 +174,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "\"Sorry, we couldn't find a driver with the name, jake! :(\""
+       "\"Sorry, we couldn't find a driver with the name, Jake! :(\""
       ]
      },
-     "execution_count": 11,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
