Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -196,9 +196,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\"Sorry, we couldn't find a driver with the name, Michelle! :(\""
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Find \"michelle\"\n",
     "output_2 = find_driver_by_name(list_of_drivers, 'michelle')\n",
@@ -207,9 +218,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\"Sorry, we couldn't find a driver with the name, Allison! :(\""
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Find \"allison\"\n",
     "output_3 = find_driver_by_name(list_of_drivers, 'allison')\n",
