--- a/index.ipynb
+++ b/index.ipynb
@@ -195,16 +195,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "\"Sorry, we couldn't find a driver with the name, Michelle! :(\""
+       "<__main__.Driver at 0x7fee0d722ac8>"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -217,7 +217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -226,7 +226,7 @@
        "\"Sorry, we couldn't find a driver with the name, Allison! :(\""
       ]
      },
-     "execution_count": 19,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
