Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -115,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -124,8 +124,8 @@
     "    for driver in drivers:\n",
     "        if driver.name == name:\n",
     "            return driver\n",
-    "    pr\n",
-    "    return f\"Sorry, we couldn't find a driver with the name, {name.title()}! :(\""
+    "    print(f\"Sorry, we couldn't find a driver with the name, {name.title()}! :(\")\n",
+    "    return None"
    ]
   },
   {
