Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -255,6 +255,13 @@
     "# instance objects whose name starts with the given substring\n",
     "def name_starts_with(drivers, substring):\n",
     "    \n",
+    "    \n",
+    "    # Write your code here\n",
+    "    for driver in drivers:\n",
+    "        if driver.name == name:\n",
+    "            return driver\n",
+    "    print(f\"Sorry, we couldn't find a driver with the name, {name.title()}! :(\")\n",
+    "    return None\n",
     "    pass"
    ]
   },
