--- a/index.ipynb
+++ b/index.ipynb
@@ -254,7 +254,7 @@
     "# Write your function here that returns the list of \n",
     "# instance objects whose name starts with the given substring\n",
     "def name_starts_with(drivers, substring):\n",
-    "    return [driver for driver in drivers if driver.name.startswith]\n",
+    "    return [driver for driver in drivers if driver.name.startswith(substring)]\n",
     "    \n",
     "    # Write your code here\n",
     "    for driver in drivers:\n",
