--- a/index.ipynb
+++ b/index.ipynb
@@ -255,7 +255,7 @@
     "# instance objects whose name starts with the given substring\n",
     "def name_starts_with(drivers, substring):\n",
     "    driver_starts = [driver for driver in drivers if driver.name.startswith(substring)]\n",
-    "    \n",
+    "    if len driver\n",
     "    \n",
     "    # Write your code here\n",
     "    for driver in drivers:\n",
