Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -256,7 +256,8 @@
     "def name_starts_with(drivers, substring):\n",
     "    driver_starts = [driver for driver in drivers if driver.name.startswith(substring)]\n",
     "    if len(driver_starts) > 0:\n",
-    "        return d\n",
+    "        return driver_starts\n",
+    "    print(\"\")\n",
     "    \n",
     "    # Write your code here\n",
     "    for driver in drivers:\n",
