--- a/index.ipynb
+++ b/index.ipynb
@@ -257,7 +257,7 @@
     "    driver_starts = [driver for driver in drivers if driver.name.startswith(substring)]\n",
     "    if len(driver_starts) > 0:\n",
     "        return driver_starts\n",
-    "    print(f\"Sorry, no drivers start with {name.title()}! :(\")\n",
+    "    print(f\"Sorry, no drivers start with {substring}! :(\")\n",
     "    \n",
     "    # Write your code here\n",
     "    for driver in drivers:\n",
