Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -247,7 +247,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -258,14 +258,7 @@
     "    if len(driver_starts) > 0:\n",
     "        return driver_starts\n",
     "    print(f\"Sorry, no drivers start with {substring}! :(\")\n",
-    "    \n",
-    "    # Write your code here\n",
-    "    for driver in drivers:\n",
-    "        if driver.name == name:\n",
-    "            return driver\n",
-    "    print(f\"Sorry, we couldn't find a driver with the name, {name.title()}! :(\")\n",
-    "    return None\n",
-    "    pass"
+    "    return None"
    ]
   },
   {
