--- a/index.ipynb
+++ b/index.ipynb
@@ -270,12 +270,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[<__main__.Driver at 0x7fee0d722be0>, <__main__.Driver at 0x7fee0d722cc0>]"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Drivers whose name start with 'a'\n",
-    "name_starts_with()"
+    "name_starts_with(list_of_drivers, 'a')"
    ]
   },
   {
