Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -304,6 +304,7 @@
    "source": [
     "# Write your function here that returns the driver with the highest rating\n",
     "def highest_rated_driver(drivers):\n",
+    "    ratings = \n",
     "    pass"
    ]
   },
