--- a/index.ipynb
+++ b/index.ipynb
@@ -304,7 +304,8 @@
    "source": [
     "# Write your function here that returns the driver with the highest rating\n",
     "def highest_rated_driver(drivers):\n",
-    "    ratings = [driver.rating for rating in drivers]\n",
+    "    ratings = [driver.rating for driver in drivers]\n",
+    "    \n",
     "    pass"
    ]
   },
