Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -306,7 +306,7 @@
     "def highest_rated_driver(drivers):\n",
     "    ratings = [driver.rating for driver in drivers]\n",
     "    max_rating = ratings.max()\n",
-    "    if dri\n",
+    "    for drive\n",
     "    return \n",
     "    pass"
    ]
