--- a/index.ipynb
+++ b/index.ipynb
@@ -306,7 +306,8 @@
     "def highest_rated_driver(drivers):\n",
     "    ratings = [driver.rating for driver in drivers]\n",
     "    max_rating = ratings.max()\n",
-    "    for drive\n",
+    "    for driver in drivers:\n",
+    "        if driver.rating = max_rating\n",
     "    return \n",
     "    pass"
    ]
