Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -307,8 +307,10 @@
     "    ratings = [driver.rating for driver in drivers]\n",
     "    max_rating = ratings.max()\n",
     "    for driver in drivers:\n",
-    "        if driver.rating = max_rating\n",
-    "    return \n",
+    "        if driver.rating = max_rating:\n",
+    "            return driver\n",
+    "    \n",
+    "    return N\n",
     "    pass"
    ]
   },
