Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -298,9 +298,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-30-152da1e00fd9>, line 6)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-30-152da1e00fd9>\"\u001b[0;36m, line \u001b[0;32m6\u001b[0m\n\u001b[0;31m    if driver.rating = max_rating:\u001b[0m\n\u001b[0m                     ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
    "source": [
     "# Write your function here that returns the driver with the highest rating\n",
     "def highest_rated_driver(drivers):\n",
@@ -308,10 +317,7 @@
     "    max_rating = ratings.max()\n",
     "    for driver in drivers:\n",
     "        if driver.rating = max_rating:\n",
-    "            return driver\n",
-    "    \n",
-    "    return N\n",
-    "    pass"
+    "            return driver"
    ]
   },
   {
