--- a/index.ipynb
+++ b/index.ipynb
@@ -298,25 +298,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 31,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-30-152da1e00fd9>, line 6)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-30-152da1e00fd9>\"\u001b[0;36m, line \u001b[0;32m6\u001b[0m\n\u001b[0;31m    if driver.rating = max_rating:\u001b[0m\n\u001b[0m                     ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Write your function here that returns the driver with the highest rating\n",
     "def highest_rated_driver(drivers):\n",
     "    ratings = [driver.rating for driver in drivers]\n",
     "    max_rating = ratings.max()\n",
     "    for driver in drivers:\n",
-    "        if driver.rating = max_rating:\n",
+    "        if driver.rating == max_rating:\n",
     "            return driver"
    ]
   },
@@ -333,7 +324,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Find the driver with the highest rating\n"
+    "# Find the driver with the highest rating\n",
+    "high"
    ]
   },
   {
