Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -325,7 +325,7 @@
    "outputs": [],
    "source": [
     "# Find the driver with the highest rating\n",
-    "high"
+    "highest_rated_driver(list_of_drivers, )"
    ]
   },
   {
