Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -320,7 +320,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -359,7 +359,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Define the NewDriver class\n"
+    "# Define the NewDriver class\n",
+    "class NewDriver:\n",
+    "    "
    ]
   },
   {
