Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -361,7 +361,9 @@
    "source": [
     "# Define the NewDriver class\n",
     "class NewDriver:\n",
-    "    "
+    "    \n",
+    "    def passenger_names(self):\n",
+    "        "
    ]
   },
   {
