--- a/index.ipynb
+++ b/index.ipynb
@@ -355,7 +355,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -363,7 +363,7 @@
     "class NewDriver:\n",
     "    \n",
     "    def passenger_names(self):\n",
-    "        return NewDriver.passengers"
+    "        return self.passengers"
    ]
   },
   {
@@ -375,7 +375,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
