Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -409,7 +409,7 @@
    "outputs": [],
    "source": [
     "# Instantiate a NewDriver class object\n",
-    "best_driver = Ne \n",
+    "best_driver = NewDriver() \n",
     "\n",
     "# Add the name attribute and assign it 'Garol'\n",
     "\n",
