Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -412,10 +412,10 @@
     "best_driver = NewDriver() \n",
     "\n",
     "# Add the name attribute and assign it 'Garol'\n",
-    "\n",
+    "best_driver.name = 'Garol'\n",
     "\n",
     "# Add the car_make attribute and assign it 'toyota'\n",
-    "\n",
+    "best_\n",
     "\n",
     "# Add the car_model attribute and assign it 'camry'\n",
     "\n",
