Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -415,10 +415,10 @@
     "best_driver.name = 'Garol'\n",
     "\n",
     "# Add the car_make attribute and assign it 'toyota'\n",
-    "best_\n",
+    "best_driver.car_make = 'toyota'\n",
     "\n",
     "# Add the car_model attribute and assign it 'camry'\n",
-    "\n",
+    "best_\n",
     "\n",
     "# Add the age attribute and assign it 30\n",
     "\n",
