Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -418,10 +418,10 @@
     "best_driver.car_make = 'toyota'\n",
     "\n",
     "# Add the car_model attribute and assign it 'camry'\n",
-    "best_\n",
+    "best_driver.car_model = 'camry'\n",
     "\n",
     "# Add the age attribute and assign it 30\n",
-    "\n",
+    "best_dri\n",
     "\n",
     "# Add the passengers attribute and assign it to list_of_passengers\n"
    ]
