Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -421,9 +421,10 @@
     "best_driver.car_model = 'camry'\n",
     "\n",
     "# Add the age attribute and assign it 30\n",
-    "best_dri\n",
+    "best_driver.age = 30\n",
     "\n",
-    "# Add the passengers attribute and assign it to list_of_passengers\n"
+    "# Add the passengers attribute and assign it to list_of_passengers\n",
+    "best_driver.pa"
    ]
   },
   {
