Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -424,7 +424,7 @@
     "best_driver.age = 30\n",
     "\n",
     "# Add the passengers attribute and assign it to list_of_passengers\n",
-    "best_driver.pa"
+    "best_driver.passengers = list_of_passengers"
    ]
   },
   {
