Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -444,7 +444,7 @@
    "outputs": [],
    "source": [
     "# Find the names of the passengers\n",
-    "names_of_passengers = None \n",
+    "names_of_passengers = best_driver. \n",
     "print(names_of_passengers)"
    ]
   },
