--- a/index.ipynb
+++ b/index.ipynb
@@ -439,9 +439,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 38,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[<__main__.Passenger object at 0x7fee0c5819e8>, <__main__.Passenger object at 0x7fee0c581048>, <__main__.Passenger object at 0x7fee0c5810b8>, <__main__.Passenger object at 0x7fee0c581128>]\n"
+     ]
+    }
+   ],
    "source": [
     "# Find the names of the passengers\n",
     "names_of_passengers = best_driver.passenger_names() \n",
