--- a/index.ipynb
+++ b/index.ipynb
@@ -363,7 +363,7 @@
     "class NewDriver:\n",
     "    \n",
     "    def passenger_names(self):\n",
-    "        return self.passengers"
+    "        return self.passengers.name for"
    ]
   },
   {
