Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -363,7 +363,7 @@
     "class NewDriver:\n",
     "    \n",
     "    def passenger_names(self):\n",
-    "        return [self.passenger.name for passenger in passengers]"
+    "        return [self.passenger.name for passenger in self.passengers]"
    ]
   },
   {
