Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -355,7 +355,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -363,7 +363,7 @@
     "class NewDriver:\n",
     "    \n",
     "    def passenger_names(self):\n",
-    "        return [self.passenger.name for passenger in self.passengers]"
+    "        return [passenger.name for passenger in self.passengers]"
    ]
   },
   {
